--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
                 <li class="nav-item"><a class="nav-link" href="#ViewTasksByID">View List Tasks By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#EditTasksByID">Edit List Tasks By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DeleteTasksByID">Delete List Tasks By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#CreateCases">Create Cases</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewCases">View List Cases</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewCasesByID">View List Cases By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#EditCasesByID">Edit List Cases By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#DeleteCasesByID">Delete List Cases By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#CreateExitsEmployee">Create Exits Employee</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewExitsEmployee">View List Exits Employee</a></li>
                 <li class="nav-item"><a class="nav-link" href="#ViewExitsEmployeeByID">View List Exits Employee By ID</a></li>
@@ -1740,6 +1745,161 @@
     "code": 200,
     "error": false,
     "message": "Task deleted successfully"
+}
+                            </pre>
+                </div>
+            </div>
+
+            <div id="CreateCases" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Create Cases</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/cases</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>POST</code></p>
+                    <p><strong>Request Body - Raw Json</strong></p>
+                    <pre>
+{
+    "case_name" : string
+}
+
+                            </pre>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 201,
+    "error": false,
+    "message": "Case created successfully",
+    "case": {
+        "id": int,
+        "case_name": string,
+        "created_at": time,
+        "UpdatedAt": time
+    }
+}
+                        </pre>
+                </div>
+            </div>
+
+            <div id="ViewCases" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>>View List Cases</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/cases</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>GET</code></p>
+                    <p><strong>Request Body</strong></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "All cases retrieved successfully",
+    "cases": [
+        {
+            "id": int,
+            "case_name": string,
+            "created_at": time,
+            "UpdatedAt": time
+        },
+        {
+            "id": int,
+            "case_name": string,
+            "created_at": time,
+            "UpdatedAt": time
+        },
+        {
+            "id": int,
+            "case_name": string,
+            "created_at": time,
+            "UpdatedAt": time
+        }
+    ]
+}
+                    </pre>
+                </div>
+            </div>
+
+            <div id="ViewCasesByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>View List Cases By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/cases/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>GET</code></p>
+                    <p><strong>Request Body</strong></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Case retrieved successfully",
+    "case": {
+        "id": int,
+        "case_name": string,
+        "created_at": time,
+        "UpdatedAt": time
+    }
+}
+                    </pre>
+                </div>
+            </div>
+
+
+            <div id="EditCasesByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Edit List Cases By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/cases/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>PUT</code></p>
+                    <p><strong>Request Body - Raw Json</strong></p>
+                    <pre>
+{
+    "case_name" : string
+}
+                            </pre>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Case updated successfully",
+    "case": {
+        "id": int,
+        "case_name": string,
+        "created_at": string,
+        "UpdatedAt": string
+    }
+}
+                            </pre>
+                </div>
+            </div>
+
+
+            <div id="DeleteCasesByID" class="card mb-4 anchor">
+                <div class="card-body">
+                    <h2>Delete List Cases By ID</h2>
+                    <p><strong>URL</strong></p>
+                    <p><code>/cases/:id</code></p>
+                    <p><strong>Method</strong></p>
+                    <p><code>DELETE</code></p>
+                    <p><strong>Note</strong></p>
+                    <p><code>Include authorization token in headers.</code></p>
+                    <p><strong>Response</strong></p>
+                    <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Case deleted successfully"
 }
                             </pre>
                 </div>
